Refactor ViatorActivityService